# PA_control

./: README.md
PA_setup_Qt/: main.py  pyproject.toml
PA_setup_Qt/.claude/: settings.local.json
PA_setup_Qt/gui/: galvo_widget.py  laser_widget.py  main_window.py  oscilloscope_widget.py  trigger_widget.py
PA_setup_web/: pyproject.toml  run.py  server.py
PA_setup_web/frontend/: app.js  index.html  style.css
pa_hardware/: pyproject.toml
pa_hardware/src/pa_hardware/: __init__.py  galvo.py  laser.py  oscilloscope.py  trigger.py
