[project]
name = "pa-setup-web"
version = "0.1.0"
description = "PA Setup web GUI (FastAPI + browser)"
requires-python = ">=3.12"
dependencies = [
    "pa-hardware",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
]

[tool.uv.sources]
pa-hardware = { path = "../pa_hardware", editable = true }
