[project]
name = "pa-hardware"
version = "0.1.0"
description = "Shared hardware abstraction layer — laser, galvo, oscilloscope, trigger"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "nidaqmx>=1.5.0",
    "picosdk>=1.1",
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pa_hardware"]
